--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,21 +1,58 @@
 .profile-meditations-list {
+    display: flex;
+    grid-template-columns: repeat(3, 1fr); /* Three columns layout */
+    box-sizing: border-box; 
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    flex-direction: column; /* Ensure items are stacked vertically */
+}
+
+.profile-meditation-card {
+    width: 300px; 
+    height: 400px; 
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: black;
+    margin: 20px auto; 
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.profile-meditation-card img {
+    width: 100%;
+    height: 200px; 
+    object-fit: cover; /* Ensure images maintain aspect ratio */
+    border-radius: 10px;
+}
+
+/* .carousel-controls {
+    display: flex;
+    justify-content: center;
+    margin-top: 1px; 
+} */
+
+
+.profile-meditations-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Three columns layout */
     gap: 20px;
     justify-content: center; 
 }
 
-.profile-meditation-card {
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 10px;
-    width: 100%;
-    max-width: 300px; /* Set a maximum width for the cards */
-    box-sizing: border-box; /* Ensure padding and border are included in the width */
+.delete-button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #440202;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.profile-meditation-card img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
