--- a/client/src/components/JournalEntries.css
+++ b/client/src/components/JournalEntries.css
@@ -3,7 +3,7 @@
     border-radius: 8px;
     padding: 16px;
     margin: 8px 0;
-    background-color: #75ceda;
+    background-color: #fbffff;
     color: #050505; 
   }
   
@@ -26,11 +26,11 @@
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
-    background-color: #37e920;
+    background-color: #69c7e4de;
     color: #020202;
     cursor: pointer;
   }
   
   .journal-entry-box button:hover {
-    background-color: #0056b3;
+    background-color: #3281d6;
   }
