Calendar time fixed, delete button added to journal page

--- a/client/src/components/JournalEntries.css
+++ b/client/src/components/JournalEntries.css
@@ -3,7 +3,7 @@
     border-radius: 8px;
     padding: 16px;
     margin: 8px 0;
-    background-color: #fbffff;
+    background-color: #b5e3e3;
     color: #050505; 
   }
   
