--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: #fff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: rgb(204, 236, 248);
+  box-shadow: 0 4px 6px rgba(31, 85, 200, 0.752);
   position: fixed;
   width: 100%; 
   top: 0;
@@ -36,17 +36,17 @@
 
 .navbar-link {
   text-decoration: none;
-  color: #333;
+  color: #1d22aedc;
   padding: 0.5rem 1rem;
   transition: background-color 0.3s ease;
 }
 
 .navbar-link:hover {
-  background-color: #f0f0f0;
+  background-color: #91dbe8;
   border-radius: 5px;
 }
 
 .active {
   font-weight: bold;
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid #1d22aedc;
 }
