--- a/client/src/components/UserCalendar.css
+++ b/client/src/components/UserCalendar.css
@@ -110,6 +110,7 @@
 
 .modal-content {
   padding: 20px;
+  color:#010101;
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
