--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -12,8 +12,9 @@
     width: 100%; 
   }
   
-  .home-meditations-card {
-    width: 50px; 
-    height: 50px; 
-    margin: 20px; 
-  }
+
+  .home-meditations-list img {
+    width: 200px; 
+    height: auto; 
+    margin: 50px; 
+}
