--- a/client/src/pages/Meditations.css
+++ b/client/src/pages/Meditations.css
@@ -8,7 +8,7 @@
 
 .meditations-list {
   display: flex;
-  flex-direction: column; /* Ensure single column layout */
+  flex-direction: column; 
   gap: 100px; 
   max-width: 800px;
   width: 100%;
@@ -30,11 +30,11 @@
 
 .meditation-card h2,
 .meditation-card p {
-  color: black; /* Ensure all text within the card is black */
+  color: black; 
 }
 
 .meditation-card img {
   width: 100%;
-  height: 200px; /* Adjust the height as needed */
+  height: 200px; 
   object-fit: cover;
 }
