--- a/client/src/components/JournalEntries.css
+++ b/client/src/components/JournalEntries.css
@@ -1,5 +1,5 @@
 .journal-entry-box {
-    border: 1px solid hsla(242, 90%, 34%, 0.897);
+    border: 10px solid hsla(240, 100%, 0%, 0.897);
     border-radius: 8px;
     padding: 16px;
     margin: 8px 0;
@@ -8,6 +8,8 @@
   }
   
   .journal-entry-box p {
+    margin-top: '300px';
+    margin-bottom: '300px;';
     color: #090909; 
   }
   
@@ -34,3 +36,7 @@
   .journal-entry-box button:hover {
     background-color: #3281d6;
   }
+
+  .journal-entries-container {
+    margin-top: 60px; 
+}
