--- a/client/src/pages/Meditations.css
+++ b/client/src/pages/Meditations.css
@@ -39,3 +39,17 @@
   object-fit: cover;
 }
 
+/* .modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 100%;
+  background-color: white;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.modal-content {
+  padding: 20px;
+} */
