--- a/client/src/components/UserCalendar.css
+++ b/client/src/components/UserCalendar.css
@@ -140,3 +140,11 @@
 .button-container button:hover {
   background-color: #1b35e0;
 }
+
+/* .custom-event {
+  padding: 5px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 5px;
+} */
