--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -30,7 +30,7 @@
 .home-meditations-list img {
   width: 200px; 
   height: auto; 
-  margin: 50px; 
+  margin: 0px; 
 }
 
 .streak-section {
@@ -51,3 +51,36 @@
   font-size: 16px; 
   margin-top: 90px;
 }
+
+.home-page {
+  margin-top:40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url('public/homeImage2.jpeg'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+}
+
+.banner h1 {
+  color: rgb(251, 248, 248); 
+}
+
+.streak-section h2 {
+  color: rgb(246, 238, 238); 
+}
+
+.recent-session h2 {
+  color: rgb(245, 240, 240); 
+}
+
+.home-content {
+  margin-top: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
