--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,6 +1,6 @@
 .profile-meditations-list {
     display: flex;
-    grid-template-columns: repeat(3, 1fr); /* Three columns layout */
+    grid-template-columns: repeat(3, 1fr); 
     box-sizing: border-box; 
     justify-content: center;
     align-items: center;
@@ -25,20 +25,14 @@
 .profile-meditation-card img {
     width: 100%;
     height: 200px; 
-    object-fit: cover; /* Ensure images maintain aspect ratio */
+    object-fit: cover; 
     border-radius: 10px;
 }
-
-/* .carousel-controls {
-    display: flex;
-    justify-content: center;
-    margin-top: 1px; 
-} */
 
 
 .profile-meditations-list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Three columns layout */
+    grid-template-columns: repeat(3, 1fr); 
     gap: 20px;
     justify-content: center; 
 }
